worked out some sizing and spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,7 @@
 * {
     box-sizing: border-box;
 }
-header {
-  padding: 10px;
-  background-image: linear-gradient(to bottom right, rgb(26, 26, 26), rgb(54, 54, 54), rgb(204, 15, 53));
-  display: flex;
-  align-items: center;
-  align-content: center;
-  min-width: 100%;
-  margin: auto;
-}
 
-
-/* Hero Styling Begins */
 .hero {
   display: flex;
   justify-content: center;
@@ -24,127 +13,75 @@ header {
   background-attachment: fixed;
 }
 
-#hero-body h1 {
-  max-width: 40ch;
-  transform: scale(0.94);
-  animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+#hero-body {
+    width: 58%;
 }
 
-@keyframes scale {
-  100% {
-    transform: scale(1);
-  }
-}
-#hero-body span {
-  display: inline-block;
-  opacity: 0;
-  filter: blur(4px);
-}
-#hero-body span:nth-child(1) {
-  animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+#infoBody {
+    width: 100%;
+    margin: 0 1em;
+    padding-right: 2em;
 }
 
-#hero-body span:nth-child(2) {
-  animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+.search-history {
+    width: 100%;
 }
+/* #searchPanel {
+    background-color: rgb(83, 76, 76);
+} */
 
-#hero-body span:nth-child(3) {
-  animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(4) {
-  animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(5) {
-  animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(6) {
-  animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(7) {
-  animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(8) {
-  animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(9) {
-  animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(10) {
-  animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(11) {
-  animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(12) {
-  animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(13) {
-  animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(14) {
-  animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(15) {
-  animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(16) {
-  animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(17) {
-  animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(18) {
-  animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(19) {
-  animation: fade-in 0.8s 1.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(20) {
-  animation: fade-in 0.8s 2.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-#hero-body span:nth-child(21) {
-  animation: fade-in 0.8s 2.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
-}
-
-@keyframes fade-in {
-  100% {
-    opacity: 1;
-    filter: blur(0);
-  }
-}
-/* Hero Styling Ends */ 
-
-#infoBox {
+/* #infoBox {
   width: 100%;
+} */
+#trail-info-section {
+    margin: 0 auto;
 }
 
 .trailDiv:hover {
-    box-shadow: 0 0 5px rgb(255, 255, 255);
+    box-shadow: 0 0 5px rgb(255, 255, 255);;
 }
 
 #trail-info-section a {
     text-decoration: underline;
 }
 
-#trail-info-section a.topLink {
-    text-decoration: none;
+/*#historyContainer .search-history {
+    width: 50%;
+}*/
+header {
+  padding: 10px;
+  background-image: linear-gradient(to bottom right, rgb(26, 26, 26), rgb(54, 54, 54), rgb(204, 15, 53));
 }
+/* .box {
+  width: 90%;
+} */
+@media screen and (max-width: 768px) {
+    #infoBody {
+        margin: 0;
+        padding: 0;
+    }
+    #trail-info-section {
+        margin: 0;
+    }
+    .hero {
+        height: 40vh;
+    }
+    .search-history {
+        max-width: 50%;
+    }
 
+}    
+
+@media screen and (max-width: 539px) {
+    #titleContainer {
+        flex-direction: column;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    #logoContainer {
+        align-self: center;
+    }
+}
